INCLUDE_DIRECTORIES (../include/)
ADD_LIBRARY (print print.c)
ADD_LIBRARY (ssl_print ssl_print.c)
ADD_LIBRARY (list list.c)
ADD_LIBRARY (util util.c)
ADD_LIBRARY (skiplist list.c skiplist.c)
ADD_LIBRARY (std_skiplist std_skiplist.c)
ADD_LIBRARY (defrag defrag.c ../include/defrag.h ../include/skipdb.h ../include/skiplist.h ../include/status.h ../include/list.h ../include/print.h)
SET (THREADS_PREFER_PTHREAD_FLAG ON)
FIND_PACKAGE (Threads REQUIRED)
TARGET_LINK_LIBRARIES (skiplist ${CMAKE_THREAD_LIBS_INIT})
