INCLUDE_DIRECTORIES (../include/)
ADD_LIBRARY (ssl_print ssl_print.c)
ADD_LIBRARY (sl_print sl_print.c ssl_print.c)
ADD_LIBRARY (list list.c)
ADD_LIBRARY (util util.c)
ADD_LIBRARY (btree btree.c btree_str.c)
ADD_LIBRARY (slice_pvoid slice_pvoid.c)
ADD_LIBRARY (skiplist list.c skiplist.c std_skiplist.c)
ADD_LIBRARY (std_skiplist std_skiplist.c)
ADD_LIBRARY (defrag defrag.c ../include/defrag.h ../include/skipdb.h ../include/skiplist.h ../include/status.h ../include/list.h ../include/sl_print.h ../include/std_skiplist.h ../include/slice_pvoid.h)
ADD_LIBRARY (skipdb skipdb.c)
TARGET_LINK_LIBRARIES (skipdb ssl_print sl_print list util btree slice_pvoid skiplist std_skiplist defrag)
SET (THREADS_PREFER_PTHREAD_FLAG ON)
FIND_PACKAGE (Threads REQUIRED)
TARGET_LINK_LIBRARIES (skiplist ${CMAKE_THREAD_LIBS_INIT})
